# Electron-Density-Aligner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
density_aligner/: __init__.py  cli.py  cube_io.py  prealign.py  spatial_aligner.py
docs/: DOCUMENTATION.md
examples/: README.md  generate_test_cubes.py
tests/: test_basic.py
