[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "density-aligner"
version = "1.0.0"
description = "Molecular alignment using electron density overlap"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Density Aligner Contributors"}
]
keywords = [
    "molecular alignment",
    "electron density",
    "computational chemistry",
    "drug discovery",
    "cheminformatics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
density-align = "density_aligner.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/density-aligner"
Documentation = "https://github.com/yourusername/density-aligner#readme"
Repository = "https://github.com/yourusername/density-aligner"
Issues = "https://github.com/yourusername/density-aligner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["density_aligner*"]
